fix java syntax in test